--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "ts-jest": "^29.1.2",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
+        "ts-toolbelt": "^9.6.0",
         "typescript": "^5.3.3"
     }
 }
