--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
     "name": "@arch/provider",
     "main": "dist/index.js",
+    "type": "module",
+    "exports": "./dist/index.js",
     "types": "dist/index.d.ts",
     "author": {
         "name": "Calvin Mann",
         "email": "calvinmann@gmail.com"
     },
     "scripts": {
+        "example:tic-tac-toe": "tsx examples/tic-tac-toe/index.ts",
         "build": "tsc --build .",
         "test": "jest",
         "lint": "eslint ."
@@ -25,14 +28,19 @@
         "@types/object-hash": "^3.0.6",
         "@typescript-eslint/eslint-plugin": "^6.20.0",
         "@typescript-eslint/parser": "^6.20.0",
+        "ansi-escapes": "^6.2.0",
         "babel-jest": "^29.7.0",
+        "case": "^1.6.3",
+        "chalk": "^5.3.0",
         "eslint": "^8.56.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "readline": "^1.3.0",
         "ts-jest": "^29.1.2",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
         "ts-toolbelt": "^9.6.0",
+        "tsx": "^4.7.1",
         "typescript": "^5.3.3"
     }
 }
