--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "@arch/provider",
+    "version": "0.0.0",
     "main": "dist/index.js",
     "type": "module",
     "exports": "./dist/index.js",
