--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
     "version": "0.0.1",
     "main": "dist/index.js",
     "type": "module",
-    "exports": "./dist/index.js",
-    "types": "dist/index.d.ts",
+    "exports": "./src/index.ts",
+
+    "publishConfig": {
+        "exports": { ".": "./dist/index.js" },
+        "types": "./dist/index.d.ts"
+    },
+
     "author": {
         "name": "Calvin Mann",
         "email": "calvinmann@gmail.com"
