--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
     "name": "@arch/provider",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "main": "dist/index.js",
     "type": "module",
     "exports": "./src/index.ts",
-
     "publishConfig": {
-        "exports": { ".": "./dist/index.js" },
+        "exports": {
+            ".": "./dist/index.js"
+        },
         "types": "./dist/index.d.ts"
     },
-
     "author": {
         "name": "Calvin Mann",
         "email": "calvinmann@gmail.com"
