--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@arch/context",
     "version": "0.0.14",
-    "main": "dist/index.js",
+    "main": "dist/src/index.js",
     "type": "module",
     "exports": "./src/index.ts",
     "publishConfig": {
