Excluded examples from build for now

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -104,7 +104,8 @@
     },
     "exclude": [
         "**/*.test.ts",
-        "dist/"
+        "dist/",
+        "examples/"
     ],
     "ts-node": {
         "esm": true,
